lab1/Test/L1-A-11-67.cmm
int ;
struct <= n4ZsFFfq6HDL4j ;
int ;
struct XS2 G583 , T6CfzltUmCuGgYl 

;
int NbjNwQESWEC7Qx ( int Too5k4ZJgykcCwJ8u1 , float 
  gPPMVB6AiX_kfEs_to ) {
  struct {
  }siXvPU0CduOiV17_ [ 2047198463 ] = vyZPsr0 = yXV8kBxh1IUJl 
    <= TEa5jFQ0A4k - U22U5IOdn / - AbjAuwQTi ( YyLLPNEx5DCAw0Y 
    , TAV4DwglsmIVXAzgh1 = UUTUHdOmMQMXsXPEg || lCo8lBWNGDI 
    && > v01LmXm2iMoSOAwWJ9 / Q4ZyVibSD [ _1ScYpqSM8iwCLVEUcw 
    || w3 && qE6RIvOG8xBqg1ptC >= f42gyd2tVyqePGfI - ! 
    - Ve ( hkEmHZZj8jSWpdpNCD , i != PbCdv0SBOI [ ZfIKK_j_ISBk5s5R7p 
    = - HETF [ txDtpoK1CfPdf || cQ == rcRtb7U6JesL8qq9mY 
    / ( enUWXnbTU4O_4Ro89d < mVon_VKs8RDGWWWzq ) / 1433617046.1297867703 
    ] ] - ! 1262363867 ) . XbV7dTcr6Tpbn3 ] ) + ! - lWoD910PRut 
    * RyAXQIlfqoOxR1EPbge ( ) ;
}
int ;
int ;
int H ( ) {
  if ( igF87HIrc9hsfz )   while msM2qADxcHp_ )   yF7tMIuyn4T 
    ;

else   if ( x9dWeSQpxnkOk )   if ( D   return rwIf08sMjmI 
    ;
else {
  }


}
struct {
  int TpZqEcki8 , e_Xo ;
};
struct cPu683Q_evm18uB ;
;
struct JnYSs {
};
if 